--- a/site/lobbyists/css/style.css
+++ b/site/lobbyists/css/style.css
@@ -15,22 +15,24 @@ a {
     color: steelblue;
 }
 
-svg {
-    font: 500 12px "arial", sans-serif;
-    fill: #023858;
-}
 
 #chart {
     height: 700px;
 }
 
 .title {
-    font-weight: bolder;
-    font-size: 20px;
+    font-weight: bold;
+    font-size: 22px;
     color: #000;
     font-family: "PT Sans", sans-serif;
 }
 
+.agency {
+    font-weight: bold;
+    font-size: 18px;
+    color: #000;
+    font-family: "PT Sans", sans-serif;
+}
 .columnHead {
     font-family: Helvetica, Arial, sans-serif;
     font-size: 13px;
