--- a/site/lobbyists/css/layout.css
+++ b/site/lobbyists/css/layout.css
@@ -1,16 +1,29 @@
 .container {
     display: grid;
-    grid-template-areas: "title      title"
-                         "agency     agency"
-                         "agencies   sankey";
-    grid-template-columns: 1fr 4fr;
-    grid-template-rows: repeat(3, auto);
+    grid-template-areas: "title      title   title         title"
+                         "agencies   agency  agency        agency"
+                         "agencies   client  lobbyingFirm  staffer"   
+                         "agencies   sankey  sankey        sankey";
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 30px 25px 10px 1000px; 
     grid-gap: .5em;
     margin: 0 auto;
 }
 
 .title {
     grid-area: title;
+}
+
+.client {
+    grid-area: client;
+}
+
+.lobbyingFirm {
+    grid-area: lobbyingFirm;
+}
+
+.staffer {
+    grid-area: staffer;
 }
 
 .agency {
@@ -20,6 +33,7 @@
 .agencies {
     grid-area: agencies;
 }
+
 
 .sankey {
     grid-area: sankey;
