--- a/site/lobbyists/css/style.css
+++ b/site/lobbyists/css/style.css
@@ -74,3 +74,17 @@ a {
     font-weight: bold;
     color: #ad494a;
 }
+
+div.tooltip {
+    position: absolute;
+    text-align: center;
+    width: 60px;
+    height: 28px;
+    padding: 2px;
+    font: 12px sans-serif;
+    /*background: lightsteelblue;*/
+    border: 1px solid black;
+    /*color: #ad494a;*/
+    /*border-radius: 8px;*/
+    pointer-events: none;
+}
